Fixed label suggestion overflow
Now limited to 100px

--- a/Frontend/src/pages/recipe/recipe.scss
+++ b/Frontend/src/pages/recipe/recipe.scss
@@ -50,6 +50,8 @@ page-recipe {
     .autocomplete {
       box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
       max-width: 600px;
+      max-height: 100px;
+      overflow-y: auto;
 
       button.suggestion {
         display: block;
